# studyOpenGL

./: .gitignore  .gitmodules  CMakeLists.txt  make_project.bat  readme.md
glad/glad/: glad.h
notes/: 着色器.md
resource/: fragment_shader_01.glsl  vertex_shader_01.glsl
src/: CMakeLists.txt
src/rectangle/: CMakeLists.txt  main.cpp
src/shaders/: CMakeLists.txt  glad.c  main.cpp
src/triangles/: CMakeLists.txt  main.cpp
src/window/: CMakeLists.txt  main.cpp
utils/: shaders.hpp
